--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="css/style.css"> <!-- Resource style -->
 	<script src="js/modernizr.js"></script> <!-- Modernizr -->
 
-	<title>Makabaka328</title>
+	<title>531快乐一家</title>
 	<style>
 		body {
 			font-family: "Arial Rounded MT Bold";
