--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 			<li><a></a></li>
 			<li><a href="https://siyuyang1.github.io/-/">大爹杨思宇</a>https:</li>
 			<li><a href="https:">元神邱文鹏</a></li>
-			<li><a href="https:">混子张海亮</a></li>
-			<li><a href="https:">国服阿离胡博文</a></li>
+			<li><a href="https://afdsjkhjhk.github.io/zhanghaidie/">混子张海亮</a></li>
+			<li><a href="https://huhuhuhuhu666.github.io/xssjk/">国服阿离胡博文</a></li>
 			<li><a href="https://biscuit220702.github.io/CS2307-HUST.github.io/
 ">返回班级主页</a></li>
 		</ul>https://biscuit220702.github.io/CS2307-HUST.github.io/
