--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 	<nav>
 		<ul class="cd-primary-nav">
 			<li><a></a></li>
-			<li><a href="https://siyuyang1.github.io/-/">大爹杨思宇</a>https:</li>
-			<li><a href="https:">元神邱文鹏</a></li>
+			<li><a href="https://siyuyang1.github.io/-/">大爹杨思宇</a></li>
+			<li><a href="https://wenpengqiu.github.io/Webs/">元神邱文鹏</a></li>
 			<li><a href="https://afdsjkhjhk.github.io/zhanghaidie/">混子张海亮</a></li>
 			<li><a href="https://huhuhuhuhu666.github.io/xssjk/">国服阿离胡博文</a></li>
 			<li><a href="https://biscuit220702.github.io/CS2307-HUST.github.io/
